Named the title and added footer links

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sky Spy</title>
   </head>
   <body>
     <h1>Sky Spy in progress...</h1>
     <footer>
-      Coded by <a href="#">Erika Cuby</a>, on <a href="#">GitHub</a> and hosted
-      on <a href="#">Netlify</a>
+      Coded by
+      <a href="https://github.com/ErikaCuby" target="_blank">Erika Cuby</a>, on
+      <a href="https://github.com/ErikaCuby/Sky-Spy" target="_blank">GitHub</a>
+      and hosted on
+      <a href="https://sky-spy.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
 </html>
