--- a/index.html
+++ b/index.html
@@ -3,16 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Sky Spy</title>
   </head>
   <body>
-    <h1>Sky Spy in progress...</h1>
-    <footer>
-      Coded by
-      <a href="https://github.com/ErikaCuby" target="_blank">Erika Cuby</a>, on
-      <a href="https://github.com/ErikaCuby/Sky-Spy" target="_blank">GitHub</a>
-      and hosted on
-      <a href="https://sky-spy.netlify.app/" target="_blank">Netlify</a>
-    </footer>
+    <div class="base">
+      <div class="forecast">
+        <div class="display">
+          <header>
+            <form id="search-form">
+              <input
+                type="search"
+                placeholder="Enter a city.."
+                required
+                class="search-input"
+                id="search-input"
+              />
+              <input type="submit" value="Search" class="search-button" />
+            </form>
+          </header>
+          <main>
+            <div class="current-weather">
+              <p class="current-city">
+                <span class="material-symbols-outlined"> location_on </span
+                >Bratislava
+              </p>
+              <p class="current-condition">Sunny</p>
+              <p class="current-temperature-value">
+                24<span class="current-temperature-unit">°C</span>
+              </p>
+            </div>
+            <div class="current-weather-icon">☀️</div>
+          </main>
+          <div class="current-details">
+            <ul>
+              <li class="current-day">
+                <span class="material-symbols-outlined"> calendar_today </span
+                >Wednesday
+              </li>
+              <li class="current-time">
+                <span class="material-symbols-outlined"> schedule </span>02:56
+              </li>
+              <li class="current-humidity">
+                <span class="material-symbols-outlined">
+                  humidity_percentage </span
+                >73%
+              </li>
+              <li class="current-wind">
+                <span class="material-symbols-outlined"> air </span>7.2km/h
+              </li>
+            </ul>
+          </div>
+        </div>
+        <footer>
+          Coded by
+          <a href="https://github.com/ErikaCuby" target="_blank">Erika Cuby</a>,
+          open sourced on
+          <a href="https://github.com/ErikaCuby/Sky-Spy" target="_blank"
+            >GitHub</a
+          >
+          and hosted on
+          <a href="https://sky-spy.netlify.app/" target="_blank">Netlify</a>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
