css color styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="style.css" />
     <title>Sky Spy</title>
   </head>
@@ -60,6 +62,7 @@
           </div>
         </div>
         <footer>
+          <br />
           Coded by
           <a href="https://github.com/ErikaCuby" target="_blank">Erika Cuby</a>,
           open sourced on
