css form and div display positioning

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <form id="search-form">
               <input
                 type="search"
-                placeholder="Enter a city.."
+                placeholder="Enter a city..."
                 required
                 class="search-input"
                 id="search-input"
@@ -45,18 +45,18 @@
             <ul>
               <li class="current-day">
                 <span class="material-symbols-outlined"> calendar_today </span
-                >Wednesday
+                > Wednesday
               </li>
               <li class="current-time">
-                <span class="material-symbols-outlined"> schedule </span>02:56
+                <span class="material-symbols-outlined"> schedule </span> 02:56
               </li>
               <li class="current-humidity">
                 <span class="material-symbols-outlined">
                   humidity_percentage </span
-                >73%
+                > 73%
               </li>
               <li class="current-wind">
-                <span class="material-symbols-outlined"> air </span>7.2km/h
+                <span class="material-symbols-outlined"> air </span> 7.2km/h
               </li>
             </ul>
           </div>
