Added in js search functionality using API

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
                 ><span id="current-city">Bratislava</span>
               </p>
               <p class="current-condition">Sunny</p>
-              <p class="current-temperature-value">
-                24<span class="current-temperature-unit">°C</span>
+              <p>
+                <span
+                  class="current-temperature-value"
+                  id="current-temperature-value"
+                >
+                  24</span
+                ><span class="current-temperature-unit">°C</span>
               </p>
             </div>
             <div class="current-weather-icon">☀️</div>
