Injected in js more weather data

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span class="material-symbols-outlined"> location_on </span
                 ><span id="current-city">Bratislava</span>
               </p>
-              <p class="current-condition">Sunny</p>
+              <p class="current-condition" id="current-condition">Sunny</p>
               <p>
                 <span
                   class="current-temperature-value"
