Injected in js the icon element

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 ><span class="current-temperature-unit">°C</span>
               </p>
             </div>
-            <div class="current-weather-icon">☀️</div>
+            <div id="current-weather-icon"></div>
           </main>
           <div class="current-details">
             <ul>
