--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
             </ul>
           </div>
         </div>
+        <br />
+        <div class="weather-forecast-row">
+          <div class="weather-forecast-single-day">
+            <div class="weather-forecast-date">Wed</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <span class="weather-forecast-temperature-max">15º</span>
+              <span class="weather-forecast-temperature-min">9º</span>
+            </div>
+          </div>
+        </div>
         <footer>
           <br />
           Coded by
