--- a/index.html
+++ b/index.html
@@ -77,16 +77,7 @@
           </div>
         </div>
         <br />
-        <div class="weather-forecast-row">
-          <div class="weather-forecast-single-day">
-            <div class="weather-forecast-date">Wed</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temperatures">
-              <span class="weather-forecast-temperature-max">15º</span>
-              <span class="weather-forecast-temperature-min">9º</span>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast-row" id="forecast"></div>
         <footer>
           <br />
           Coded by
