Deleted fake data from html

--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
             <div class="current-weather">
               <p class="current-city">
                 <span class="material-symbols-outlined"> location_on </span
-                ><span id="current-city">Bratislava</span>
+                ><span id="current-city"></span>
               </p>
-              <p class="current-condition" id="current-condition">Sunny</p>
+              <p class="current-condition" id="current-condition"></p>
               <p>
                 <span
                   class="current-temperature-value"
                   id="current-temperature-value"
-                >
-                  24</span
+                ></span
                 ><span class="current-temperature-unit">°C</span>
               </p>
             </div>
@@ -57,21 +56,21 @@
             <ul>
               <li class="current-day">
                 <span class="material-symbols-outlined"> calendar_today </span
-                ><span id="current-day"> Wednesday</span>
+                ><span id="current-day"></span>
               </li>
               <li class="current-time">
                 <span class="material-symbols-outlined"> schedule </span
-                ><span id="current-time"> 02:56</span>
+                ><span id="current-time"></span>
               </li>
               <li class="current-humidity">
                 <span class="material-symbols-outlined">
                   humidity_percentage
                 </span>
-                <span id="current-humidity"> 73%</span>
+                <span id="current-humidity"></span>
               </li>
               <li class="current-wind">
                 <span class="material-symbols-outlined"> air </span
-                ><span id="current-wind"> 7.2km/h</span>
+                ><span id="current-wind"></span>
               </li>
             </ul>
           </div>
