Added meta description

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Sky Spy</title>
+    <meta name="description" content="Blue Weather App coded by Erika Cuby">
   </head>
   <body>
     <div class="base">
