--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <footer>
           <br />
           Coded by
-          <a href="https://github.com/ErikaCuby" target="_blank">Erika Cuby</a>,
+          <a href="https://www.erikakubickova.com/" target="_blank" title="Erika Kubíčková | Portfolio">Erika Cuby</a>,
           open sourced on
-          <a href="https://github.com/ErikaCuby/Sky-Spy" target="_blank"
+          <a href="https://github.com/ErikaCuby/Sky-Spy" target="_blank" title="Erika Kubíčková | GitHUb"
             >GitHub</a
           >
           and hosted on
-          <a href="https://sky-spy.netlify.app/" target="_blank">Netlify</a>
+          <a href="https://sky-spy.netlify.app/" target="_blank" title="Erika Kubíčková | Netlify">Netlify</a>
         </footer>
       </div>
     </div>
